gap fix

--- a/src/flexbox.less
+++ b/src/flexbox.less
@@ -59,8 +59,8 @@
 
 // gap
 .for(1 2 3 4 5 6 7 8 9 10 12 14 16 18 20 22 24 26, {
-  .gap@{value} {
-    gap: @value * 1 !important;
+  .gap-@{value} {
+    gap: @value * 1px !important;
   }
 });
 
@@ -68,6 +68,11 @@
   .for(1 2 3 4 5 6 7 8 9 10 100, {
     .s-order-@{value} {
       order: @value * 1 !important;
+    }
+  });
+  .for(1 2 3 4 5 6 7 8 9 10 12 14 16 18 20 22 24 26, {
+    .s-gap-@{value} {
+      gap: @value * 1px !important;
     }
   });
 }
@@ -78,12 +83,22 @@
       order: @value * 1 !important;
     }
   });
+  .for(1 2 3 4 5 6 7 8 9 10 12 14 16 18 20 22 24 26, {
+    .m-gap-@{value} {
+      gap: @value * 1px !important;
+    }
+  });
 }
 
 @media @media-desktop {
   .for(1 2 3 4 5 6 7 8 9 10 100, {
     .l-order-@{value} {
       order: @value * 1 !important;
+    }
+  });
+  .for(1 2 3 4 5 6 7 8 9 10 12 14 16 18 20 22 24 26, {
+    .l-gap-@{value} {
+      gap: @value * 1px !important;
     }
   });
 }
